Fix most warnings & reduce boilerplate
Disable warning 8618 (uninitialized non-nullable) as it spams Blazor
Switch serialized properties to fields

--- a/OzricUI/Components/BinarySustainDialog.razor
+++ b/OzricUI/Components/BinarySustainDialog.razor
@@ -35,7 +35,7 @@
 @code {
 
     [CascadingParameter]
-    MudDialogInstance MudDialog { get; set; } = new();
+    MudDialogInstance MudDialog { get; set; }
 
     [Parameter]
     public BinarySustainModel Model { get; set; }
