--- a/OzricUI/Components/GraphEditor.razor
+++ b/OzricUI/Components/GraphEditor.razor
@@ -601,7 +601,7 @@
     {
         var input = variableInputs.AddInput(inputName);
         var model = (VariableInputsModel) nodeMappings.GetDiagram(variableInputs);
-        model.AddInput(input);
+        model.AddVariableInput(input);
     }
 
     public void RemoveNodeInput(VariableInputs variableInputs, string inputName)
