--- a/OzricUI/Components/GraphNodeComponent.razor
+++ b/OzricUI/Components/GraphNodeComponent.razor
@@ -53,6 +53,7 @@
                                 break;
 
                             case ValueType.Mode:
+                                <span>@pin.value</span>
                                 <img src="icons/@(port.valueType).png" width="16" height="16" alt="@(pin.value)"/>
                                 break;
 
